# easy-netcdf

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
example/: GEN_APCP06.F90  test_create_nc.F90  test_read_nc.F90  test_write_nc.F90
src/: base_type_mod.F90  dimension_type_mod.F90  easy_netcdf.F90  global_type_mod.F90  netcdf_data_type_mod.f90  netcdf_i_mod.F90  netcdf_io_mod.F90  netcdf_o_mod.F90  netcdf_param_mod.F90  netcdf_tool_mod.F90  netcdf_tools_mod.F90  netcdf_type_mod.F90  netcdf_xtype_mod.F90  variable_type_mod.F90
test/: run_test_create.sh  run_test_read.sh  test_create_nc.F90  test_read_nc.F90
